# spyair-sdr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILLS.md
.claude/agents/: rust-tdd-engineer.md
data/: README.md  spyair.db
src/: error.rs  geo.rs  lib.rs  location.rs
src/adsb/: mod.rs
src/audio/: mod.rs
src/dsp/: mod.rs
src/freqdb/: mod.rs  ourairports.rs  service.rs  store.rs
src/gps/: mod.rs
src/ipgeo/: mod.rs
src/planner/: mod.rs
src/scanner/: mod.rs
src/sdr/: mod.rs  rtlsdr.rs
src/tui/: mod.rs
