[package]
name = "spyair-sdr"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Location-aware RTL-SDR scanner that figures out what you can hear from where you are."
license = "MIT"
repository = "https://github.com/m96-chan/spyair-sdr"

[dependencies]
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"

[lib]
name = "spyair_sdr"
path = "src/lib.rs"

[[bin]]
name = "build-db"
path = "src/bin/build_db.rs"
